# eros

./: .gitignore  CLAUDE.md  EROS_AGENT_INSTRUCTIONS.md  README.md  pyproject.toml
.memories/: .active-plan
.memories/2026-02-20/: 190733_8b49.md  191255_8b60.md  191552_d249.md  191956_b10a.md  192730_2877.md  193016_2c03.md  193139_f5e1.md  193557_8134.md  194101_1bb4.md  195437_47be.md  195810_17cc.md  200251_3b4c.md  200436_d70a.md  200819_f3cb.md  201112_7dff.md  201733_a7d4.md  202020_cc86.md  202648_a806.md  203512_da98.md  212537_06b0.md  223206_3601.md
.memories/2026-02-25/: 021020_01aa.md  021910_f71c.md  022207_4152.md  022601_ce2f.md  023440_438d.md
.memories/plans/: add-file-logging-timing-instrumentation-to-eros.md  reference-workspace-support-for-eros.md
python/eros/: __init__.py  __main__.py  chunking.py  config.py  embeddings.py  incremental.py  indexing.py  julie_reader.py  lifecycle.py  retrieval.py  server.py  storage.py
python/tests/: conftest.py  test_chunking.py  test_embeddings.py  test_julie_reader.py  test_logging.py  test_retrieval.py  test_storage.py
