[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eros"
version = "0.1.0"
description = "Semantic Code Intelligence MCP Server — meaning-based search for code and documentation"
requires-python = ">=3.12"
authors = [
    { name = "Eros Contributors" }
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # MCP framework (verified 2026-02-20: latest is 3.0.0)
    "fastmcp>=2.0",
    # Embedding models (verified 2026-02-20: latest is 5.2.3)
    "sentence-transformers>=4.0",
    # Vector store (verified 2026-02-20: latest is 0.29.2)
    "lancedb>=0.20",
    # LanceDB dependencies
    "pyarrow>=14.0",
    # PyTorch (verified 2026-02-20)
    "torch>=2.0",
    # Required by CodeRankEmbed's custom model code
    "einops>=0.7",
    # Cross-encoder reranking
    "numpy>=1.24",
]

[project.scripts]
eros = "eros.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["python/eros"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]

ignore = [
    "E501",  # Line too long
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]
